// Copyright (C) 2025 The go-job Authors. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

package plugins

// Job represents a job plugin interface.
type Job interface {
	Kind() string
	Executor() any
}

type jobImpl struct {
	kind     string
	executor any
}

func NewJob(kind string, exec any) Job {
	return &jobImpl{
		kind:     kind,
		executor: exec,
	}
}

func (j *jobImpl) Kind() string {
	return j.kind
}

func (j *jobImpl) Executor() any {
	return j.executor
}
